tests/snapshots/cli__show_a_profile_that_does_not_exist.snap
---
source: tests/cli.rs
expression: r.stderr
---
ricepilot: profile `nope`: no such profile. expected a directory at <HOME>/.local/share/ricepilot/profiles/nope
