tests/snapshots/cli__status.snap
---
source: tests/cli.rs
expression: r.stdout
---
home:      <HOME>
data:      <HOME>/.local/share/ricepilot
state:     <HOME>/.local/state/ricepilot
profiles:  1
             caelestia
owned:     none — no live path is registered as owned yet
generation: none — ricepilot has not switched anything on this machine

`ricepilot diff <profile>` compares a profile's links and tree with the live filesystem and with
what ricepilot recorded; `ricepilot verify <profile>` checks the tree alone.
