tests/snapshots/cli__status_with_owned_paths.snap
---
source: tests/cli.rs
expression: s.stdout
---
home:      <HOME>
data:      <HOME>/.local/share/ricepilot
state:     <HOME>/.local/state/ricepilot
profiles:  1
             caelestia
owned:     2 path(s)
             <HOME>/.config/foot -> <HOME>/rice/caelestia/foot (caelestia)
             <HOME>/.config/hypr -> <HOME>/rice/caelestia/hypr (caelestia)
generation: none — ricepilot has not switched anything on this machine

`ricepilot diff <profile>` compares a profile's links and tree with the live filesystem and with
what ricepilot recorded; `ricepilot verify <profile>` checks the tree alone.
