tests/snapshots/cli__verify_on_an_unchanged_profile_is_clean_and_exits_zero.snap
---
source: tests/cli.rs
expression: r.stdout
---
verify: profile `bare`
root:      <HOME>/.local/share/ricepilot/profiles/bare
recorded:  20260921T101112Z (3 path(s))
excluded:  **/*.log

clean: every recorded path still hashes to what it did.
