tests/snapshots/cli__verify_reports_drift_and_exits_with_the_drift_code.snap
---
source: tests/cli.rs
expression: r.stdout
---
verify: profile `bare`
root:      <HOME>/.local/share/ricepilot/profiles/bare
recorded:  20260921T101112Z (3 path(s))
excluded:  **/*.log

1 path(s) differ:
  changed      hypr/hyprland.conf
